<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dicj.info.AGEECJ_V3.MainActivity"
    android:orientation="vertical"
    android:background="#ffffff">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView8" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight=".10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="pusher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="pusher"
                    android:paddingLeft="15dp"/>
            </LinearLayout>

            <View android:background="#BDBDBD"
                android:layout_width = "match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight=".10"
                android:onClick="layout3OnClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/NomEv3"
                    android:id="@+id/textView5"
                    android:paddingTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/DateEv3"
                    android:paddingLeft="15dp"
                    android:id="@+id/textView6" />
            </LinearLayout>

            <View android:background="#BDBDBD"
                android:layout_width = "match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight=".10"
                android:onClick="layout2OnClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/NomEv2"
                    android:id="@+id/textView3"
                    android:paddingTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/DateEv2"
                    android:paddingLeft="15dp"
                    android:id="@+id/textView4" />
            </LinearLayout>

            <View android:background="#BDBDBD"
                android:layout_width = "match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight=".10"
                android:onClick="layoutOnClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/NomEv1"
                    android:id="@+id/textView2"
                    android:paddingTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/DateEv1"
                    android:paddingLeft="15dp"
                    android:id="@+id/textView" />
            </LinearLayout>

            <View android:background="#BDBDBD"
                android:layout_width = "match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight=".10"
                android:onClick="layout7OnClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/NomEv7"
                    android:id="@+id/textView13"
                    android:paddingTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/DateEv7"
                    android:paddingLeft="15dp"
                    android:id="@+id/textView14" />
            </LinearLayout>

            <View android:background="#BDBDBD"
                android:layout_width = "match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight=".10"
                android:onClick="layout5OnClick"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/NomEv5"
                    android:id="@+id/textView9"
                    android:paddingTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/DateEv5"
                    android:paddingLeft="15dp"
                    android:id="@+id/textView10" />
            </LinearLayout>

            <View android:background="#BDBDBD"
                android:layout_width = "match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight=".10"
                android:onClick="layout4OnClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/NomEv4"
                    android:id="@+id/textView7"
                    android:paddingTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/DateEv4"
                    android:paddingLeft="15dp"
                    android:id="@+id/textView8" />
            </LinearLayout>

            <View android:background="#BDBDBD"
                android:layout_width = "match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight=".10"
                android:onClick="layout6OnClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/NomEv6"
                    android:id="@+id/textView11"
                    android:paddingTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/DateEv6"
                    android:paddingLeft="15dp"
                    android:id="@+id/textView12" />
            </LinearLayout>

            <View android:background="#BDBDBD"
                android:layout_width = "match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight=".10"
                android:background="@drawable/shadow"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="!!!PUB!!!"
                    android:paddingLeft="140dp"
                    android:paddingTop="15dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>